--- a/demo-app.yaml
+++ b/demo-app.yaml
@@ -1,7 +1,7 @@
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata: 
-  name: demo-app-deploy
+  name: app_name-deploy
 spec: 
   replicas: 3
   strategy:
@@ -12,10 +12,10 @@ spec:
   template:
     metadata:
       labels:
-        app: demo-app
+        app: app_name
     spec:
       containers:
-      - name: demo-app
+      - name: app_name
         image: busayr/nodejs:app_version
         env:
         - name: PORT
@@ -37,11 +37,11 @@ spec:
 kind: Service
 apiVersion: v1
 metadata:
-  name: demo-app-svc
+  name: app_name-svc
 spec:
   type: NodePort
   selector:
-    app: demo-app
+    app: app_name
   ports: 
   - nodePort: 31001
     protocol: TCP
