--- a/demo-app.yaml
+++ b/demo-app.yaml
@@ -43,7 +43,7 @@ spec:
   selector:
     app: app_name
   ports: 
-  - nodePort: 31001
+  - nodePort: 
     protocol: TCP
     port: 80
     targetPort: 80
